# Models/Student.go
@@ -9,25 +9,29 @@ func GetStudent(id string) (student Student) {
 	return student
 }
 
-func AddNewStudent(b *Student) (err error) {
-	if err = Config.DB.Create(b).Error; err != nil {
+func GetStudents() (students []Student, err error) {
+	err = Config.DB.Find(&students).Error
+	if err != nil {
+		return nil, err
+	}
+	return students, nil
+}
+
+func AddNewStudent(student *Student) (err error) {
+	if err = Config.DB.Create(student).Error; err != nil {
 		return err
 	}
 	return nil
 }
 
-func UpdateStudent(b *Student, id string) (err error) {
-	var user Student
-	Config.DB.Where("id = ?", id).First(&user)
-	user.Name = b.Name
-	user.Surname = b.Surname
-	user.Age = b.Age
-	Config.DB.Save(&user)
+func UpdateStudent(student *Student, id string) (err error) {
+	Config.DB.Where("id = ?", id).First(&student)
+	Config.DB.Save(&student)
 	return nil
 }
 
-func DeleteStudent(b *Student, id string) (err error) {
-	if err = Config.DB.Where("id = ?", id).Delete(b).Error; err != nil {
+func DeleteStudent(student *Student, id string) (err error) {
+	if err = Config.DB.Where("id = ?", id).Delete(student).Error; err != nil {
 		return err
 	}
 	return nil
